--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,8 @@
     --bcg-footer:#2F303A;
     --color-transparency:rgba(255, 255, 255, 0.6);
     --color-section: #F5F4FA;
+    --color-header-bottom: #ECECEC;
+    --color-border-portfolio: #EEEEEE;
     }
 
 body {
@@ -36,8 +38,17 @@ p{
     margin: 0;
     padding: 0;
 }
+.section {
+    text-align: center;
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 
-.container{
+.section:nth-child(2n+4) {
+    background-color: var(--color-section);
+}
+
+.container {
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
@@ -69,7 +80,7 @@ p{
 
 .logo:hover,
 .logo:focus{
-      text-decoration: underline var(--accent-color);
+    text-decoration: underline var(--accent-color);
 }
 
 /* Page navigation */
@@ -120,18 +131,10 @@ p{
     color: var(--accent-color);
 }
 .header{
-    border-bottom: 1px solid #ECECEC;
+    border-bottom: 1px solid var(--color-header-bottom);
 }
 /* Main page Studio */
-.section{
-    text-align: center;
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
 
-  .section:nth-child(2n+3){
-    background-color: var(--color-section);
-  }
 /* Hero */
 .hero{
     background-color:var(--bcg-footer)
@@ -171,15 +174,16 @@ p{
 .btn:focus {
     color:var(--main-color-text);
 }
+ /* Preference */
 
-.hide{
+ .hide{
     display: none;
 }
 .preference{
     display: flex;
     text-align: left;
-    margin-bottom: 94px;
 }
+
 .preference-item +.preference-item{
     margin-left: 10px;
 }
@@ -195,6 +199,9 @@ p{
 }
 
 /* Gallery */
+.gallery-section{
+    padding-top: 0;
+}
 
 .title-section{ 
     margin-bottom: 50px;
@@ -210,7 +217,7 @@ p{
 
    /* Our team */
 .team-item {
-    border:#F5F4FA;
+    border: var(--color-section);
     border-radius: 4px;
     background-color:var(--white-color);
 }
@@ -277,12 +284,14 @@ margin-left: 8px;
 .portfolio-img{
     display: block;
 }
-.portfolio-link {
+.portfolio-link{
+    text-decoration: none;
+}
+.portfolio-field-text {
     display: block;
     padding: 20px 24px;
     text-align: left;
-    text-decoration: none;
-    border: 1px solid #EEEEEE;
+    border: 1px solid var(--color-border-portfolio);
 }
 
 .portfolio-title{
